--- a/src/components/Uploadmenu.scss
+++ b/src/components/Uploadmenu.scss
@@ -17,7 +17,7 @@ margin-bottom: 100%;
     // margin-top: 10%;
     height: auto;
     min-height: fit-content;
-    
+    margin-bottom: 0px;
 }
 .image-container img{
     width: 300px;
