--- a/src/App.css
+++ b/src/App.css
@@ -5,40 +5,7 @@
   background-color: black;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 .restaurant ul {
   position: fixed;
   z-index: 9999999;
@@ -59,4 +26,37 @@
 
 .cart li{
   list-style: none;
+}
+#cart-btn{
+  position: 'fixed';
+  top: 38px;
+  right: 20px;
+  left: 74%;
+  background-color: '#E21837';
+  color: 'white';
+  border-radius: 30px;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+  z-index:  1001;
+}
+
+
+
+@media (max-width: 900px) {
+  #cart-btn{
+    margin-top: 10vh;
+    margin-right: 10%;
+    position: relative;
+  }
+
+  #inp{
+    width: 200px;
+    height: 50px;
+  }
+  #btnn{
+    width: 180px;
+    margin: 20px;
+    
+  }
 }
